--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --progress --display-error-details --config webpack/common.config.js --watch",
-    "prod": "webpack --progress -p --config webpack/common.config.js",
-    "lintjs": "eslint -c .eslintrc src/static tests/js || true",
-    "lintscss": "sass-lint --verbose --no-exit || true"
+    "prod": "webpack --progress -p --config webpack/common.config.js"
   },
   "repository": {
     "type": "git",
@@ -24,26 +22,93 @@
     "url": "https://github.com/raheemazeezabiodun/django-react-redux-blog/issues"
   },
   "homepage": "https://github.com/raheemazeezabiodun/django-react-redux-blog#readme",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "html-webpack-plugin": "^3.1.0",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
-  },
   "dependencies": {
-    "material-ui": "^0.20.0",
-    "path": "^0.12.7",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "autoprefixer": "7.1.2",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-react-display-name": "2.0.0",
+    "babel-plugin-react-transform": "2.0.2",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-undeclared-variables-check": "6.22.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-es2015-loose": "8.0.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
+    "babel-runtime": "6.26.0",
+    "body-parser": "1.17.2",
+    "bootstrap-loader": "2.2.0",
+    "bootstrap-sass": "3.3.7",
+    "classnames": "2.2.5",
+    "clean-webpack-plugin": "0.1.16",
+    "css-loader": "0.28.5",
+    "errorhandler": "1.5.0",
+    "es6-promise": "4.1.1",
+    "exports-loader": "0.6.4",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "font-awesome": "4.7.0",
+    "font-awesome-webpack": "0.0.5-beta.2",
+    "history": "4.7.2",
+    "html-webpack-plugin": "2.30.1",
+    "imports-loader": "0.7.1",
+    "isomorphic-fetch": "2.2.1",
+    "jquery": "3.2.1",
+    "less": "2.7.2",
+    "less-loader": "4.0.5",
+    "node-sass": "4.5.3",
+    "postcss-import": "10.0.0",
+    "postcss-loader": "2.0.6",
+    "prop-types": "15.5.10",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "react-mixin": "3.1.0",
+    "react-redux": "5.0.6",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
+    "react-router-redux": "5.0.0-alpha.6",
+    "redux": "3.7.2",
+    "redux-thunk": "2.2.0",
+    "resolve-url-loader": "2.1.0",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
+    "tcomb-form": "0.9.17",
+    "url-loader": "0.5.9",
+    "webpack": "3.5.5",
+    "webpack-merge": "4.1.0",
+    "whatwg-fetch": "2.0.3",
+    "yargs": "8.0.2",
+    "material-ui": "^0.20.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "7.2.3",
+    "chai": "4.1.1",
+    "chai-as-promised": "7.1.1",
+    "enzyme": "2.9.1",
+    "eslint": "4.5.0",
+    "eslint-config-airbnb": "15.1.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.3.0",
+    "expect": "1.20.2",
+    "ignore-styles": "5.0.01",
+    "istanbul": "1.0.0-alpha.2",
+    "jsdom": "11.2.0",
+    "mocha": "3.5.0",
+    "mocha-junit-reporter": "1.13.0",
+    "nock": "9.0.14",
+    "react-test-renderer": "15.6.1",
+    "react-transform-catch-errors": "1.0.2",
+    "react-transform-hmr": "1.0.4",
+    "redbox-react": "1.5.0",
+    "redux-devtools": "3.4.0",
+    "redux-devtools-dock-monitor": "1.1.2",
+    "redux-devtools-log-monitor": "1.3.0",
+    "redux-logger": "3.0.6",
+    "redux-mock-store": "1.2.3",
+    "sass-lint": "1.10.2",
+    "sinon": "3.2.1",
+    "webpack-dev-middleware": "1.12.0",
+    "webpack-hot-middleware": "2.18.2"
   }
 }
